infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zlodowy
  labels:
    name: zlodowy
    app: zlodowy
